src/test/deca/context/valid/provided/AssignBoolean.deca
// DESCRIPTION : Assingnement de booleans
{
   boolean a;
   boolean b = true;
   a = b;
}
